--- a/package.json
+++ b/package.json
@@ -7,7 +7,13 @@
     "duplexify": "^3.1.3",
     "torrent-stream": "^0.13.5"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "abstract-blob-store": "^3.2.0",
+    "tape": "^4.0.0"
+  },
+  "scripts": {
+    "test": "node test.js"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/mafintosh/torrent-blob-store.git"
