--- a/package.json
+++ b/package.json
@@ -4,8 +4,16 @@
   "description": "Read-only BitTorrent backed streaming blob store",
   "main": "index.js",
   "dependencies": {
+    "concat-stream": "^1.4.8",
+    "create-torrent": "^3.10.0",
     "duplexify": "^3.1.3",
-    "torrent-stream": "^0.13.5"
+    "mkdirp": "^0.5.0",
+    "once": "^1.3.1",
+    "osenv": "^0.1.0",
+    "parse-torrent": "^4.0.0",
+    "readable-stream": "^1.0.33",
+    "torrent-stream": "^0.13.5",
+    "xtend": "^4.0.0"
   },
   "devDependencies": {
     "abstract-blob-store": "^3.2.0",
