--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "abstract-blob-store": "^3.2.0",
+    "bittorrent-tracker": "^3.4.7",
     "tape": "^4.0.0"
   },
   "scripts": {
