--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "tape": "^4.0.0"
   },
   "scripts": {
-    "test": "node test.js"
+    "test": "tape test/*.js"
   },
   "repository": {
     "type": "git",
